Fix Semester Main Page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">treasurerAppVersion1</string>
+    <string name="app_name">Treasure App V1</string>
     <string name="new_students">New Students</string>
     <string name="add_student">Add Student</string>
 
